<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="5dp"
            app:contentPadding="25dp"
            app:cardCornerRadius="4dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/login_fragment_header_text"
                    android:textColor="@color/colorDarkTeal"
                    android:textSize="18sp"
                    android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_fragment_edit_text_hint"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextAppearance="@style/GreenTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/enter_password_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/login_fragment_button_text"
                    android:textSize="14sp"
                    app:cornerRadius="4dp"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp" />

         </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
